Move Kramden-specific settings from defaults.ini
There were only two changes compared to the stock eos-image-builder
defaults.ini. Move these to the kramden personality.

--- a/config/personality/kramden.ini
+++ b/config/personality/kramden.ini
@@ -18,7 +18,12 @@ apps_add =
 allow_extra_data_add =
   com.google.Chrome
 
+apps_del =
+  org.chromium.Chromium
+
 [flatpak-remote-flathub]
+exclude_del =
+  org.videolan.VLC
 
 apps_add =
   net.sourceforge.Klavaro
