Fix references to local data files

--- a/config/personality/kramden.ini
+++ b/config/personality/kramden.ini
@@ -6,10 +6,11 @@ iso = true
 hooks_add =
   51-desktop-folders.chroot
 
-icon_grid_add = data/icon-grid/icon-grid-C.json
+icon_grid_add =
+  ${build:localdatadir}/icon-grid/icon-grid-C.json
 
 settings_add =
-  data/settings/favorite-apps
+  ${build:localdatadir}/settings/favorite-apps
 
 [flatpak-remote-eos-apps]
 apps_add =
