Correctly remove Chromium
In f00ec28d1bc9e5637e32f137508af0a753e68862 ("Move Kramden-specific
settings from defaults.ini") I incorrectly added the config to avoid
installing Chromium to the eos-apps section; but this app comes from
Flathub.

Move it to the flathub section, and also mark its .Codecs extension not
to be installed. (This extension is explicitly listed for installation
in the eos-image-builder config.)

--- a/config/personality/kramden.ini
+++ b/config/personality/kramden.ini
@@ -23,9 +23,6 @@ apps_add =
 allow_extra_data_add =
   com.google.Chrome
 
-apps_del =
-  org.chromium.Chromium
-
 [flatpak-remote-flathub]
 exclude_del =
   org.videolan.VLC
@@ -40,3 +37,9 @@ apps_add =
 allow_extra_data_add =
   us.zoom.Zoom
   com.anydesk.Anydesk
+
+apps_del =
+  org.chromium.Chromium
+
+runtimes_del =
+  org.chromium.Chromium.Codecs
